welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
  if (vuBiscuit ==true)
      ^Program:17: error: not found: value vuBiscuit
	while (vuBiscuit== false){
               ^